<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DocumentVerificationActivity">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/background_light">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/background_light"
        android:gravity="center_vertical"
        android:orientation="vertical"
        android:padding="@dimen/normal_padding">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/doc_verification_title"
            android:textColor="@color/pageTitle"
            android:textSize="28sp" />

        <TextView
            android:id="@+id/captureIdTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:gravity="center"
            android:text="@string/capture_id"
            android:textColor="@color/normalText"
            android:textSize="17sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:padding="20dp">

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/dot"
                android:drawablePadding="10dp"
                android:padding="5dp"
                android:text="@string/ensure"
                android:textColor="@color/normalText" />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="268dp"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/dot"
                android:drawablePadding="10dp"
                android:padding="5dp"
                android:text="@string/make_sure"
                android:textColor="@color/normalText" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="10dp">

            <ImageView
                android:id="@+id/docPassImageView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/document" />

            <ImageView
                android:id="@+id/cameraImageView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:background="@drawable/camera_icon" />
        </LinearLayout>

        <TextView
            android:id="@+id/textView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/doc_id"
            android:textColor="@color/normalText"
            android:textSize="17sp" />

        <android.support.design.widget.TextInputEditText
            android:id="@+id/documentIDEt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:paddingBottom="15dp"
            android:textSize="17sp" />



        <Button
            android:id="@+id/docNextBtn"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/custom_button"
            android:text="@string/next"
            android:textColor="@android:color/background_light"
            android:textSize="18sp"/>

    </LinearLayout>
    </ScrollView>
</android.support.constraint.ConstraintLayout>