<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddressVerificationActivity">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/background_light">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@android:color/background_light"
            android:gravity="center_vertical"
            android:orientation="vertical"
            android:padding="@dimen/normal_padding">

            <TextView
                android:id="@+id/textView3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/address_verification_title"
                android:textColor="@color/pageTitle"
                android:textSize="28sp" />

            <TextView
                android:id="@+id/captureIdTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:gravity="center"
                android:text="@string/capture_bill"
                android:textColor="@color/normalText"
                android:textSize="17sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:padding="20dp">

                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:drawableLeft="@drawable/dot"
                    android:drawablePadding="10dp"
                    android:padding="5dp"
                    android:text="@string/ensure"
                    android:textColor="@color/normalText" />

                <TextView
                    android:id="@+id/textView6"
                    android:layout_width="268dp"
                    android:layout_height="wrap_content"
                    android:drawableLeft="@drawable/dot"
                    android:drawablePadding="10dp"
                    android:padding="5dp"
                    android:text="@string/make_sure"
                    android:textColor="@color/normalText" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:orientation="horizontal"
                android:padding="20dp">

                <ImageView
                    android:id="@+id/addressPassImageView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/address_verification" />

                <ImageView
                    android:id="@+id/cameraImageView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:background="@drawable/camera_icon" />
            </LinearLayout>

            <TextView
                android:id="@+id/textView7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/full_address"
                android:textColor="@color/normalText"
                android:textSize="17sp" />

            <android.support.design.widget.TextInputEditText
                android:id="@+id/addressEt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName"
                android:paddingBottom="15dp"
                android:textSize="17sp" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/textView17"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:text="@string/country"
                        android:textColor="@color/normalText"
                        android:textSize="17sp" />
                    <com.hbb20.CountryCodePicker
                        android:id="@+id/ccp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        app:ccp_defaultNameCode="ZM"
                        app:ccp_showFullName="true"
                        app:ccp_showNameCode="false"
                        app:ccp_showPhoneCode="false" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="20dp"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/textView27"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:text="@string/city"
                        android:textColor="@color/normalText"
                        android:textSize="17sp" />

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/cityEt"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:inputType="textPersonName"
                        android:paddingBottom="15dp"
                        android:textSize="17sp" />
                </LinearLayout>
            </LinearLayout>

            <Button
                android:id="@+id/addressNextBtn"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/custom_button"
                android:text="@string/next"
                android:textColor="@android:color/background_light"
                android:textSize="18sp"/>

        </LinearLayout>
    </ScrollView>
</android.support.constraint.ConstraintLayout>