<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignatureActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/background_light">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@android:color/background_light"
            android:gravity="center_vertical"
            android:orientation="vertical"
            android:padding="@dimen/normal_padding">

            <TextView
                android:id="@+id/textView3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/signature_title"
                android:textColor="@color/pageTitle"
                android:textSize="28sp" />

            <TextView
                android:id="@+id/captureIdTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"

                android:gravity="center"
                android:text="@string/own_signature"
                android:textColor="@color/normalText"
                android:textSize="17sp" />

            <TextView
                android:id="@+id/textView7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/signature_title"
                android:textColor="@color/normalText"
                android:textSize="17sp" />


            <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="400dp"
                android:layout_marginTop="10dp"

                android:background="@drawable/shadow"
                android:orientation="horizontal">

                <com.github.gcacace.signaturepad.views.SignaturePad
                    android:id="@+id/signature_pad"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="1.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.0"
                    app:penColor="@android:color/black" />

                <ImageView
                    android:id="@+id/penImageView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="8dp"
                    android:layout_weight="1"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/pen" />

            </android.support.constraint.ConstraintLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingLeft="15dp"
                android:paddingRight="15dp">

                <CheckBox
                    android:id="@+id/termCheckBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingLeft="5dp"
                    android:paddingRight="5dp"
                    android:text="@string/terms" />

                <TextView
                    android:id="@+id/clickHere"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"

                    android:text="@string/click_here"
                    android:textColor="@color/pageTitle" />
            </LinearLayout>

            <Button
                android:id="@+id/signatureNextBtn"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginLeft="10dp"

                android:layout_marginTop="20dp"
                android:layout_marginRight="10dp"
                android:background="@drawable/custom_button"
                android:text="@string/next"
                android:textColor="@android:color/background_light"
                android:textSize="18sp" />

        </LinearLayout>
    </ScrollView>
</android.support.constraint.ConstraintLayout>